сделал ДЗ 3. ассерты добавил в класс HomeWorkTest